# fastapi

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.beat  Dockerfile.celery  Dockerfile.local  Makefile  README.md  add_super_admin.py  alembic.ini  docker-compose.yaml  entrypoint.sh  env_template  fill_countries.py  pyproject.toml  pytest.ini  seed_dashboard.py
.charts/: Chart.yaml  values.yaml
.charts/templates/: celery-beat-deployment.yaml  celery-deployment.yaml  celery-secret.yaml  deployment.yaml  flower-deployment.yaml  ingress.yaml  secret.yml  service.yaml  shared-pvc.yaml
.githooks/: pre-commit
app/: main.py  settings.py  worker.py
app/helpers/: chart_data_factory.py  chart_runner.py  create_db.py  database.py  dbt_runner.py  download_folder.py  exceptions.py  jwt.py  meltano_factory.py  messages.py  middlewares.py  minio.py  oauth.py  slack_insights.py  vault.py
app/routers/admin/: admin.py  crud.py  tasks.py  utils.py
app/routers/auth/: auth.py  crud.py  models.py  schema.py  tests.py  utils.py
app/routers/dashboard/: chart_data_creator.py  crud.py  dashboard.py  models.py  schema.py  utils.py
app/routers/organization/: crud.py  models.py  organization.py  schema.py  tasks.py
app/templates/: forgot.html
elt/amazon/configs/: amazon.yaml
elt/amazon/dbts/: amazon.yaml  dbt_table.sql
elt/consultant/configs/: 2base_config.yaml
elt/harut/configs/: base_config.yaml  test.txt
meltano_el/: meltano.yml
meltano_el/transform/: dbt_project.yml
migrations/: env.py  helpers.py
migrations/versions/: 00001_.py
(+15 files in other folders)
